--- a/frontend/packages/dapple/config.json
+++ b/frontend/packages/dapple/config.json
@@ -15,7 +15,7 @@
       "W-ETH": "0xd0a1e359811322d97991e03f863a0c30c2cf029c",
       "DAI": "0xc4375b7de8af5a38a93548eb8453a498222c4ff2",
       "TUSD": "0x5ea3cdad0f7b623288d822180e6f56512112ece6",
-      "CCIO": "0x81ae61c31cbf8b76293bf946d509777ccfd0f4bc",
+      "MAHA": "0x81ae61c31cbf8b76293bf946d509777ccfd0f4bc",
       "ENA": "0xaaf64bfcc32d0f15873a02163e7e500671a4ffcd"
     },
     "live": {
@@ -23,7 +23,7 @@
       "W-ETH": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
       "DAI": "0x89d24a6b4ccb1b6faa2625fe562bdd9a23260359",
       "TUSD": "0x8dd5fbce2f6a956c3022ba3663759011dd51e73e",
-      "CCIO": "0x5e4c3057518bcd6b1276b4e6e85d43a1996d1c6e",
+      "MAHA": "0x5e4c3057518bcd6b1276b4e6e85d43a1996d1c6e",
       "ENA": "0x9f8f72aa9304c8b593d555f12ef6589cc3a579a2"
     }
   }
