--- a/frontend/packages/dapple/config.json
+++ b/frontend/packages/dapple/config.json
@@ -1,30 +1,27 @@
 {
   "market": {
-    "kovan": {
-      "address": "0x0c88915dfa2af87dcdd8d29ae6ba4c6490a958e8",
-      "blockNumber": 9897255
+    "mumbai": {
+      "address": "0xe29f02789b1443a2ae4a898a8C0F6d11f8e24e1a",
+      "blockNumber": 3053642
     },
-    "live": {
-      "address": "0xD1285c5d340F07D1D897f96C6e149dD652Fd1a73",
-      "blockNumber": 7013178
+    "matic": {
+      "address": "0x37B3d851B73C3d342B10Bb258fa9Ba77685b4722",
+      "blockNumber": 3053642
     }
   },
   "tokens": {
-    "kovan": {
-      "OW-ETH": "0x53eccc9246c1e537d79199d0c7231e425a40f896",
-      "W-ETH": "0xd0a1e359811322d97991e03f863a0c30c2cf029c",
+    "mumbai": {
+      "OW-MATIC": "0x53eccc9246c1e537d79199d0c7231e425a40f896",
+      "WMATIC": "0x37B3d851B73C3d342B10Bb258fa9Ba77685b4722",
       "DAI": "0xc4375b7de8af5a38a93548eb8453a498222c4ff2",
-      "TUSD": "0x5ea3cdad0f7b623288d822180e6f56512112ece6",
-      "MAHA": "0x81ae61c31cbf8b76293bf946d509777ccfd0f4bc",
-      "ENA": "0xaaf64bfcc32d0f15873a02163e7e500671a4ffcd"
+      "MAHA": "0x81ae61c31cbf8b76293bf946d509777ccfd0f4bc"
     },
-    "live": {
-      "OW-ETH": "0xecf8f87f810ecf450940c9f60066b4a7a501d6a7",
-      "W-ETH": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
-      "DAI": "0x89d24a6b4ccb1b6faa2625fe562bdd9a23260359",
-      "TUSD": "0x8dd5fbce2f6a956c3022ba3663759011dd51e73e",
+    "matic": {
+      "OW-MATIC": "0xecf8f87f810ecf450940c9f60066b4a7a501d6a7",
+      "WMATIC": "0xcd3882232e36ad188968bcc4dbc742c14d6a6b21",
+      "DAI": "0x84000b263080bc37d1dd73a29d92794a6cf1564e",
       "MAHA": "0x5e4c3057518bcd6b1276b4e6e85d43a1996d1c6e",
-      "ENA": "0x9f8f72aa9304c8b593d555f12ef6589cc3a579a2"
+      "ETH": "0x8cc8538d60901d19692f5ba22684732bc28f54a3"
     }
   }
 }
