--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "cryptocontrol-dex",
   "private": true,
   "scripts": {
-    "build": "gulp build",
+    "build": "(cd frontend; meteor-build-client ../dist --path '')",
+    "push": "echo 'dex.mahadao.com' > dist/CNAME; gh-pages --dist dist",
     "test": "standard"
   },
   "devDependencies": {
     "babel-eslint": "6.0.0",
+    "gh-pages": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-rename": "^1.2.2",
